0.510 2023-12-04
  [New Features]
    * The ai_addr method in the Sys::Socket::Addrinfo supports AF_UNIX.
0.509 2023-12-04
  [Incompatible Changes]
    * The getc method in the Sys::IO throw an exception if the return value is C<EOF> and C<ferror(stream)> is non-zero.
    * The fread method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
    * The fwrite method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
    * The fcntl method can not recieve object type $command_arg. Only Int or Sys::IO::Flock.
    * The get_readlink_buffer_size method in the Sys::IO is removed.
    * The FILE stream open by the popen or _popen is closed automatically.
    * Remove the is_symlink method in the Sys::IO::Windows.
    * Remove the _get_readlink_buffer_size method in the Sys::IO::Windows.
  [New Features]
    * Add the lstat method to the Sys::IO::Windows class.
  [Bug Fix]
    * The l method in the Sys class work well in Windows.
0.508 2023-12-04
  [Document Fix]
    * Fix the document of the new method in the Sys::Stat class. This method do not have arguments.
  [Incompatible Changes]
    * The cando method in the Sys::Stat class becomes private. 
    * The no_close field in the Sys::IO::FileStream is renamed to no_destroy.
    * The utime method in the Sys::IO class is moved to Sys::Time class.
    * The utimes method in the Sys::IO class is moved to Sys::Time class.
    
  [Bug Fix]
    * Fix the bug that the spvm_stdin, spvm_stdout, spvm_stderr in the Sys::IO class do not return correct values.
    * Fix the bug that the STDIN, STDOUT, STDERR in the Sys class do not return correct values.
    
0.507 2023-12-01

  [New Features]
    * Add the following user/group methods to the Sys class.
    
      real_user_id

      effective_user_id

      real_group_id

      effective_group_id

      set_real_user_id

      set_effective_user_id
