@@ -4,6 +4,21 @@
 class Sys::Socket::Errno {
   use Sys::OS;
   use Errno;
+  use Sys::Socket;
+  
+  static method errno : int () {
+    
+    my $errno = Sys::Socket->socket_errno;
+    
+    return $errno;
+  }
+  
+  static method strerror : string ($errno : int, $length : int = 0) {
+    
+    my $strerror = Sys::Socket->socket_strerror($errno, $length);
+    
+    return $strerror;
+  }
   
   static method EINTR : int () {
     if (Sys::OS->is_windows) {
